# wildlens

./: .env.example  .gitignore  CONTRIBUTING.md  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  dedup.py  exif_utils.py  ingest.py  ingest_runner.py  main.py  models.py  video.py
backend/app/enrich/: __init__.py  facts.py  geocode.py  http_cache.py
backend/app/identification/: __init__.py  base.py  claude.py  mock.py  none_provider.py  registry.py
backend/app/routers/: manage.py  onedrive.py  photos.py
backend/app/sources/: __init__.py  onedrive.py
backend/tests/: test_api.py  test_dedup.py  test_enrich.py  test_exif.py  test_infer.py  test_manage.py  test_onedrive.py  test_video.py
deploy/: README.md  cloudflare-tunnel.service  install.sh  wildlens-backup.service.template  wildlens-backup.sh  wildlens-backup.timer  wildlens-ingest.path.template  wildlens-ingest.service.template  wildlens-watchdog.service.template  wildlens-watchdog.sh  wildlens-watchdog.timer  wildlens.service.template  wildlens.socket
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  api.js
frontend/src/components/: Gallery.jsx  Lightbox.jsx  MapView.jsx  OneDriveModal.jsx  PhotoDetail.jsx  Sidebar.jsx  UploadPanel.jsx
frontend/src/lib/: grouping.js
scripts/: seed_sample.py
