[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wildlens-backend"
version = "0.1.0"
description = "wildlens — explore vacation photos on a map with pluggable AI identification"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pillow>=11.0.0",
    "piexif>=1.1.3",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",          # FastAPI TestClient
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: pure logic, no I/O",
]
